# ctldl

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: ctldlExampleTargets.cmake
ctldl/: CMakeLists.txt  empty_factor_data.hpp  empty_factor_data_diagonal.hpp  empty_factor_data_left.hpp  empty_matrix_input.hpp  factorization.hpp  factorization_already_permuted.hpp  factorization_repeating_block_tridiagonal.hpp  factorization_subdiagonal_block.hpp  factorize.hpp  factorize_entry_wise.hpp  solve_backward_substitution.hpp  solve_forward_substitution.hpp
ctldl/factor_data/: CMakeLists.txt  empty_factor_data_diagonal.hpp  empty_factor_data_left.hpp  factorization.hpp  factorization_already_permuted.hpp  factorization_repeating_block_tridiagonal.hpp  factorization_repeating_block_tridiagonal_arrowhead_linked.hpp  factorization_repeating_block_tridiagonal_arrowhead_linked.test.cpp  factorization_subdiagonal_block.hpp  runner_tests_unit_factor_data.cpp  sparsity_to_factorize_link.hpp  sparsity_to_factorize_outer.hpp  sparsity_to_factorize_start.hpp  sparsity_to_factorize_tridiagonal.hpp  sparsity_to_factorize_tridiagonal_arrowhead_linked.hpp
ctldl/factorize/: factor_initialization.hpp  factorize.hpp  factorize_entry_wise.hpp  factorize_method.hpp  factorize_up_looking.hpp  fill_with_original_matrix.hpp  regularization.hpp  regularization_none.hpp  regularization_small_positive_constant.hpp
ctldl/fileio/: CMakeLists.txt  mtx_check.cpp  mtx_check.hpp  mtx_file_read_repeating_block_tridiagonal.hpp  mtx_file_read_repeating_block_tridiagonal_arrowhead_linked.hpp  mtx_foreach_entry.cpp  mtx_foreach_entry.hpp  mtx_read_header.cpp  mtx_read_header.hpp
ctldl/matrix/: empty_matrix_input.hpp  matrix_link.hpp  matrix_outer.hpp  matrix_start.hpp  matrix_tridiagonal.hpp  matrix_tridiagonal_arrowhead_linked.hpp  multiply.hpp  multiply_kind.hpp  multiply_repeating_block_tridiagonal.hpp  multiply_repeating_block_tridiagonal_arrowhead_linked.hpp
ctldl/permutation/: factorial.hpp  invert_permutation.hpp  permutation.hpp  permutation_enumeration.hpp  permutation_identity.hpp  permuted_entry.hpp  permuted_entry_lower_triangle.hpp
ctldl/solve/: solve_backward_substitution.hpp  solve_forward_substitution.hpp
ctldl/sparsity/: bool_matrix.hpp  entry.hpp  entry_print.hpp  filled_in_sparsity.hpp  get_contributions.hpp  get_entries.hpp  get_entries_csr.hpp  get_entry_indices.hpp  is_square.hpp  (+13 more)
ctldl/symbolic/: CMakeLists.txt  add_row_elimination_tree.hpp  compute_elimination_tree.hpp  compute_elimination_tree_blocked.hpp  compute_elimination_tree_blocked.test.cpp  compute_elimination_tree_repeating.hpp  compute_elimination_tree_repeating.test.cpp  elimination_tree.hpp  elimination_tree_subtree.hpp  filled_in_sparsity.hpp  filled_in_sparsity_blocked.hpp  filled_in_sparsity_blocked.test.cpp  filled_in_sparsity_repeating.hpp  filled_in_sparsity_repeating_arrowhead.hpp  filled_in_sparsity_repeating_arrowhead.test.cpp  foreach_ancestor_in_subtree.hpp  foreach_nonzero_with_fill.hpp  foreach_nonzero_with_fill_blocked.hpp  foreach_nonzero_with_fill_repeated.hpp  foreach_nonzero_with_fill_repeating_arrowhead.hpp  get_entries_with_fill.hpp  get_filled_in_is_nonzero_info.hpp  is_chordal_blocked.hpp  lower_triangle_blocked.hpp  repeating_block_tridiagonal.hpp  repeating_block_tridiagonal_arrowhead.hpp  runner_tests_unit_symbolic.cpp
examples/: CMakeLists.txt  benchmark_mtx.cpp  example_mtx.cpp  example_nos2.cpp  example_nos4.cpp  example_tridiagonal.cpp
examples/mtx_includes/laufkatze101/: ctldl_repeating_mtx_include.hpp
examples/mtx_includes/spline51/: ctldl_repeating_mtx_include.hpp
examples/mtx_includes/suitesparse/HB/nos4/: ctldl_repeating_mtx_include.hpp
examples/mtx_includes/transworhp/opal/: ctldl_repeating_mtx_include.hpp
examples/repeating/: CMakeLists.txt  benchmark_mtx.cpp  example_indef.cpp  example_mtx.cpp  example_nos2.cpp  example_nos4.cpp  example_tridiagonal.cpp
examples/repeating/mtx_includes/suitesparse/Bai/mhdb416/: ctldl_repeating_mtx_include.hpp
examples/repeating/mtx_includes/suitesparse/HB/nos2/: ctldl_repeating_mtx_include.hpp
examples/repeating/mtx_includes/suitesparse/HB/nos4/: ctldl_repeating_mtx_include.hpp
examples/repeating/mtx_includes/transworhp/laufkatze/: ctldl_repeating_mtx_include.hpp
examples/repeating/mtx_includes/transworhp/opal/: ctldl_repeating_mtx_include.hpp
examples/repeating/mtx_includes/transworhp/spline/: ctldl_repeating_mtx_include.hpp
examples/single/: CMakeLists.txt  example_indef_single.cpp  example_lfat5.cpp
tests/: CMakeLists.txt  runner_tests_integration.cpp  test_multiply_factorize_solve_correct.cpp  test_multiply_factorize_solve_correct_repeating.cpp  test_multiply_factorize_solve_correct_single.cpp
tests/multiply_factorize_solve_correct/repeating/: larger_examples_good_permutation.cpp  random_examples.cpp  small_examples_all_permutations.cpp  test_functor.hpp  test_functor_random.hpp
tests/multiply_factorize_solve_correct/repeating_arrowhead_linked/: random_examples.cpp  test_functor.hpp  test_functor_random.hpp
tests/multiply_factorize_solve_correct/single/: larger_examples_good_permutation.cpp  small_examples_all_permutations.cpp  test_functor.hpp
tests/test_matrices/: nos2.hpp  nos4.hpp  tridiagonal.hpp
tests/test_matrices/repeating/: indef.hpp  nos2.hpp  nos4.hpp  tridiagonal.hpp
tests/test_matrices/single/: lfat5.hpp  random.hpp
tests/utility/: CMakeLists.txt  generate_matrices.hpp  int_constant.hpp  is_specialization_of.hpp  multi_invoke.hpp  runner_tests_unit_testutility.cpp  solution_generator.cpp  solution_generator.hpp  test_arguments.hpp  test_set.hpp  test_set_foreach.hpp  test_sparsity_equal.hpp  test_static.hpp  to_test_info.cpp  to_test_info.hpp  tuple.hpp
tests/utility/random/: bernoulli_distribution.hpp  bool_matrix_distribution.hpp  compile_time_generate.hpp  linear_congruence_generator.hpp  procedural_matrix_generator.hpp  procedural_test_matrix.hpp  procedural_test_permutation.hpp  procedural_test_permutation.test.cpp  shuffle.hpp  uniform_int_distribution.hpp
(+13 files in other folders)
